[project]
name = "meshtatic_listener"
version = "2.1.0"
description = "A server for connecting to a Meshtastic device and responding to commands."
authors = [{ name = "Michael Gillett", email = "51103663+migillett@users.noreply.github.com" }]
requires-python = ">=3.10,<3.14"
readme = "README.md"
dependencies = [
    "pubsub>=0.1.2,<0.2",
    "requests>=2.32.4,<3",
    "pydantic>=2.10.5,<3",
    "toml>=0.10.2,<0.11",
    "pytest>=8.3.4,<9",
    "sqlalchemy>=2.0.37,<3",
    "meshtastic>=2.5.11,<3",
    "psycopg2>=2.9.10,<3",
    "jinja2>=3.1.6,<4",
    "fastapi>=0.115.12,<0.116",
    "uvicorn>=0.34.2,<0.35",
    "alembic>=1.16.1,<2",
    "dotenv>=0.9.9",
]

[project.scripts]
meshtastic_listener = "meshtastic_listener.__main__:main"

[dependency-groups]
dev = ["pytest>=8.3.4,<9"]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = [
    "./meshtatic_listener",
]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
